Fix overflow when showing errors on fancytree ajax calls

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -265,6 +265,9 @@ span.select2-hidden-accessible {
 
 .error-red {
   background-color: red !important;
+  td {
+    overflow: unset !important;
+  }
 }
 
 #timestamps {
